--- a/poc/nx.json
+++ b/poc/nx.json
@@ -1,40 +1,29 @@
 {
   "implicitDependencies": {
     "angular.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "npmScope": "poc",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "actions": {
-      "tags": []
-    },
-    "actions-e2e": {
-      "tags": [],
-      "implicitDependencies": ["actions"]
-    },
-    "api": {
-      "tags": []
-    },
-    "api-interfaces": {
-      "tags": []
-    }
+    "actions": { "tags": [] },
+    "actions-e2e": { "tags": [], "implicitDependencies": ["actions"] },
+    "api": { "tags": [] },
+    "api-interfaces": { "tags": [] },
+    "second": { "tags": [] },
+    "one": { "tags": [] },
+    "third": { "tags": [] },
+    "one-api": { "tags": [] },
+    "two-api": { "tags": [] }
   }
 }
