--- a/poc/package.json
+++ b/poc/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "nx build --prod",
+    "build:api": "nx build api --prod",
+    "build:second": "nx build second --prod",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
